--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(sonia_common_cpp REQUIRED)
 find_package(sonia_common_ros2 REQUIRED)
 find_package(std_srvs REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package ( Boost COMPONENTS log REQUIRED )
 
 include_directories(include)
 
@@ -31,7 +32,7 @@ install(TARGETS
 ${PROJECT_NAME}
   DESTINATION lib/${PROJECT_NAME})
 
-ament_target_dependencies(${PROJECT_NAME} rclcpp sonia_common_cpp sonia_common_ros2 std_msgs std_srvs)
+ament_target_dependencies(${PROJECT_NAME} rclcpp Boost sonia_common_cpp sonia_common_ros2 std_msgs std_srvs)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
