--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
   <depend>sonia_common_ros2</depend>
   <depend>std_srvs</depend>
   <depend>std_msgs</depend>
+  <depend>Boost</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
